--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.22.1",
     "bootstrap": "^5.3.3",
+    "framer-motion": "^11.11.17",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-calendar": "^5.1.0",
