--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.7.8",
     "bootstrap": "^5.3.3",
     "framer-motion": "^11.11.17",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-calendar": "^5.1.0",
