updateUI and complete implement CRUD for board!

--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,13 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
+    "@dnd-kit/accessibility": "^3.1.1",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-regular-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/base": "^5.0.0-beta.61",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -14,6 +21,7 @@
     "framer-motion": "^11.11.17",
     "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.10.5",
     "react-calendar": "^5.1.0",
     "react-dom": "^18.3.1",
