--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "antd": "^5.22.1",
     "axios": "^1.7.8",
     "bootstrap": "^5.3.3",
+    "cycle": "^1.0.3",
     "framer-motion": "^11.11.17",
     "moment": "^2.30.1",
     "react": "^18.3.1",
