--- a/server/package.json
+++ b/server/package.json
@@ -27,5 +27,8 @@
         "nodemon": "^3.1.7",
         "socket.io": "^4.8.1",
         "winston": "^3.17.0"
+    },
+    "devDependencies": {
+        "nodemon": "^3.1.7"
     }
 }
