--- a/client/package.json
+++ b/client/package.json
@@ -19,12 +19,15 @@
     "axios": "^1.7.8",
     "bootstrap": "^5.3.3",
     "cycle": "^1.0.3",
+    "date-fns": "^4.1.0",
     "framer-motion": "^11.11.17",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
+    "react-big-calendar": "^1.19.4",
     "react-bootstrap": "^2.10.5",
     "react-calendar": "^5.1.0",
+    "react-date-range": "^2.0.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
