--- a/server/.env
+++ b/server/.env
@@ -7,6 +7,5 @@ CLOUDINARY_CLOUD_NAME=drkqpnekp
 CLOUDINARY_API_KEY=892313126594482
 CLOUDINARY_API_SECRET=8P1auxSShgJH6lcvBcs5tZHe2bQ
 # MONGODB_URI=mongodb+srv://mainguyenthicit19:123456task01minder@cluster0.bdrg1.mongodb.net/taskminde?retryWrites=true&w=majority&appName=Cluster0
-#
-MONGODB_URI= mongodb+srv://mainguyenthicit19:NomfJYNVXvzrSRY9@cluster0.sr36tc5.mongodb.net/
+#MONGODB_URI= mongodb+srv://mainguyenthicit19:NomfJYNVXvzrSRY9@cluster0.sr36tc5.mongodb.net/
 
